inventory/src/main/fabric8/inventory-deployment.yml
apiVersion: v1
kind: Deployment
metadata:
  name: ${project.artifactId}
spec:
  template:
    spec:
      containers:
        - env:
            - name: "INVENTORY_DB_USERNAME"
              valueFrom:
                 secretKeyRef:
                   name: inventory-database-secret
                   key: user
            - name: "INVENTORY_DB_PASSWORD"
              valueFrom:
                 secretKeyRef:
                   name: inventory-database-secret
                   key: password
            - name: JAVA_OPTIONS
              value: "-Djava.net.preferIPv4Stack=true -Dswarm.datasources.data-sources.InventoryDS.user-name=${env.INVENTORY_DB_USERNAME} -Dswarm.datasources.data-sources.InventoryDS.password=${env.INVENTORY_DB_PASSWORD} -Dswarm.datasources.data-sources.InventoryDS.connection-url=jdbc:postgresql://inventory-database:5432/inventory"

#apiVersion: v1
#kind: DeploymentConfig
#metadata:
#  name: inventory
#spec:
#  replicas: 1
#  strategy:
#    rollingParams:
#      timeoutSeconds: 10800
#    type: Rolling
#  template:
#    metadata:
#      labels:
#        app: inventory
#        deploymentconfig: inventory
#    spec:
#      containers:
#      - env:
#        - name: KUBERNETES_NAMESPACE
#          valueFrom:
#            fieldRef:
#              fieldPath: metadata.namespace
#        - name: JAVA_APP_DIR
#          value: /deployments
#        - name: JAVA_OPTIONS
#          value: -Djava.net.preferIPv4Stack=true -Dswarm.datasources.data-sources.InventoryDS.connection-url=jdbc:postgresql://inventory-database:5432/inventory
#        name: inventory
#        image: inventory:latest
#        imagePullPolicy: IfNotPresent
#        ports:
#        - containerPort: 8080
#          name: http
#          protocol: TCP
#        securityContext:
#          privileged: false
#  triggers:
#  - type: ConfigChange
#  - imageChangeParams:
#      automatic: true
#      containerNames:
#      - inventory
#      from:
#        kind: ImageStreamTag
#        name: inventory:latest
#    type: ImageChange
